# swagger-output.json
@@ -1,25 +1,29 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
-    "title": "ConectaBem APIs",
-    "description": "APIs para o projeto ConectaBem",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "title": "ConectaBem Back-end APIs",
+    "description": "APIs para o projeto ConectaBem"
   },
-  "host": "localhost:3000",
-  "basePath": "/",
+  "servers": [
+    {
+      "url": "http://localhost:3000"
+    }
+  ],
   "tags": [
     {
       "name": "User",
       "description": "Endpoints relacionados aos usuários"
     }
   ],
-  "schemes": [
-    "http"
-  ],
   "paths": {
     "/": {
       "get": {
-        "description": "Teste",
+        "tags": [
+          "Teste"
+        ],
+        "summary": "Teste da rota",
+        "description": "Este endpoint é um teste para verificar se a API está funcionando corretamente",
         "responses": {
           "200": {
             "description": "OK"
@@ -29,19 +33,26 @@
     },
     "/user/{id}": {
       "get": {
-        "tags": ["User"],
-        "description": "Puxar informações do usuário",
+        "tags": [
+          "User"
+        ],
+        "summary": "Retorna informações do usuário",
+        "description": "Retorna informações do usuário",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           },
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -49,92 +60,111 @@
             "description": "OK"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Solicitação Inválida"
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Não autorizado"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Não Encontrado"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/auth/register": {
       "post": {
-        "tags": ["User"],
-        "description": "Cadastro do usuário",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                },
-                "confirmPassword": {
-                  "example": "any"
+        "tags": [
+          "User"
+        ],
+        "summary": "Realiza o cadastro do usuário",
+        "description": "Realiza o cadastro do usuário",
+        "responses": {
+          "201": {
+            "description": "Criado"
+          },
+          "422": {
+            "description": ""
+          },
+          "500": {
+            "description": "Erro Interno do Servidor"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  },
+                  "confirmPassword": {
+                    "example": "any"
+                  }
                 }
               }
             }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "422": {
-            "description": "Unprocessable Entity"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
     },
     "/auth/login": {
       "post": {
-        "tags": ["User"],
-        "description": "Login do usuário",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
+        "tags": [
+          "User"
         ],
+        "summary": "Realiza o login do usuário",
+        "description": "Realiza o login do usuário",
         "responses": {
           "200": {
             "description": "OK"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Não Encontrado"
           },
           "422": {
-            "description": "Unprocessable Entity"
+            "description": ""
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Erro Interno do Servidor"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer"
       }
     }
   }
